@@ -6,19 +6,24 @@ bin/reek
 config/defaults.reek
 features/masking_smells.feature
 features/options.feature
-features/rake_task.feature
 features/reports.feature
 features/samples.feature
 features/stdin.feature
 features/step_definitions/reek_steps.rb
 features/support/env.rb
 lib/reek.rb
+lib/reek/adapters/application.rb
+lib/reek/adapters/command_line.rb
+lib/reek/adapters/config_file.rb
+lib/reek/adapters/core_extras.rb
+lib/reek/adapters/object_source.rb
+lib/reek/adapters/rake_task.rb
+lib/reek/adapters/source.rb
+lib/reek/adapters/spec.rb
 lib/reek/block_context.rb
 lib/reek/class_context.rb
 lib/reek/code_context.rb
 lib/reek/code_parser.rb
-lib/reek/config_file.rb
-lib/reek/core_extras.rb
 lib/reek/detector_stack.rb
 lib/reek/exceptions.reek
 lib/reek/if_context.rb
@@ -26,9 +31,6 @@ lib/reek/method_context.rb
 lib/reek/module_context.rb
 lib/reek/name.rb
 lib/reek/object_refs.rb
-lib/reek/object_source.rb
-lib/reek/options.rb
-lib/reek/rake_task.rb
 lib/reek/report.rb
 lib/reek/sexp_formatter.rb
 lib/reek/singleton_method_context.rb
@@ -45,11 +47,13 @@ lib/reek/smells/smell_detector.rb
 lib/reek/smells/uncommunicative_name.rb
 lib/reek/smells/utility_function.rb
 lib/reek/sniffer.rb
-lib/reek/source.rb
-lib/reek/spec.rb
 lib/reek/stop_context.rb
 lib/reek/yield_call_context.rb
 reek.gemspec
+spec/quality/reek_source_spec.rb
+spec/reek/adapters/should_reek_of_spec.rb
+spec/reek/adapters/should_reek_only_of_spec.rb
+spec/reek/adapters/should_reek_spec.rb
 spec/reek/block_context_spec.rb
 spec/reek/class_context_spec.rb
 spec/reek/code_context_spec.rb
@@ -61,11 +65,7 @@ spec/reek/module_context_spec.rb
 spec/reek/name_spec.rb
 spec/reek/object_refs_spec.rb
 spec/reek/object_source_spec.rb
-spec/reek/options_spec.rb
 spec/reek/report_spec.rb
-spec/reek/should_reek_of_spec.rb
-spec/reek/should_reek_only_of_spec.rb
-spec/reek/should_reek_spec.rb
 spec/reek/singleton_method_context_spec.rb
 spec/reek/smell_warning_spec.rb
 spec/reek/smells/control_couple_spec.rb
@@ -100,6 +100,8 @@ spec/samples/mixed_results/clean_three.rb
 spec/samples/mixed_results/clean_two.rb
 spec/samples/mixed_results/dirty_one.rb
 spec/samples/mixed_results/dirty_two.rb
+spec/samples/not_quite_masked/dirty.rb
+spec/samples/not_quite_masked/masked.reek
 spec/samples/optparse.rb
 spec/samples/redcloth.rb
 spec/samples/three_clean_files/clean_one.rb
@@ -107,10 +109,6 @@ spec/samples/three_clean_files/clean_three.rb
 spec/samples/three_clean_files/clean_two.rb
 spec/samples/two_smelly_files/dirty_one.rb
 spec/samples/two_smelly_files/dirty_two.rb
-spec/slow/inline_spec.rb
-spec/slow/optparse_spec.rb
-spec/slow/redcloth_spec.rb
-spec/slow/reek_source_spec.rb
 spec/spec.opts
 spec/spec_helper.rb
 tasks/reek.rake
