@@ -9,7 +9,6 @@ require 'reek/smells/long_yield_list'
 require 'reek/smells/nested_iterators'
 require 'reek/smells/uncommunicative_name'
 require 'reek/smells/utility_function'
-require 'reek/config_file'
 require 'reek/code_parser'
 require 'reek/report'
 require 'yaml'
