@@ -1,13 +1,15 @@
 require File.dirname(__FILE__) + '/../spec_helper.rb'
 
-describe 'Reek source code:' do
-  Dir['lib/**/*.rb'].each do |path|
-    it "reports no smells in #{path}" do
-      File.new(path).should_not reek
+describe 'Reek source code' do
+  it 'has no smells' do
+    Dir['lib/**/*.rb'].should_not reek
+  end
+
+  nucleus = Dir['lib/reek/**.rb'] - Dir['lib/reek/adapters/**/*.rb']
+  nucleus.each do |src|
+    it "#{src} contains no references from the nucleus out to the adapters" do
+      File.new(src).lines.grep(/adapters/).should be_empty
     end
   end
 
-  it 'reports no smells via the Dir matcher' do
-    Dir['lib/**/*.rb'].should_not reek
-  end
 end
