@@ -1,6 +1,6 @@
 require File.dirname(__FILE__) + '/../../spec_helper.rb'
 
-require 'reek/object_source'
+require 'reek/adapters/object_source'
 require 'reek/smells/long_parameter_list'
 require 'reek/report'
 
